--- a/B3/Properties/Resources.resx
+++ b/B3/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="BeatsByBaukLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\beats_by_bauk_logo_760x100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="beats_by_nicole_logo_760x100" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\beats_by_nicole_logo_760x100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
